# MLOps-lab

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: setup.md
experiments/nyc-taxi-duration/: README.md
experiments/nyc-taxi-duration/notebooks/: duration_regression.ipynb  final_model.ipynb
infra/containers/: compose.yaml
scripts/: bootstrap.sh  fetch-tlc-data.sh
