[project]
name = "mlops-lab"
version = "0.1.0"
description = "Reproducible ML experimentation workspace"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=15.0",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "notebook>=7.5.7",
    "mlflow>=3.14.0",
    "xgboost>=2.0",
    "hyperopt>=0.2",
    "setuptools>=69,<82",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
